--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
+<head>
+	<title>Dapper Gentlemen - We Make Apps</title>
+</head>
+
+<body>
+	
+</body>
+
 </html>
