--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Dapper Gentlemen - We Make Apps</title>
+	<meta name="description" content="Dapper Gentlemen knows mobile design and 
+	development can be complex for startup and enterprise businesses. Learn how 
+	we make it simple.">
+	<title>We Make Amazing Apps</title>
 </head>
 
 <body>
