--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Dapper Gentlemen knows mobile design and 
 	development can be complex for startup and enterprise businesses. Learn how 
 	we make it simple.">
-	<title>We Make Amazing Apps</title>
+	<title>We Make Amazing Apps at Dapper Gentlemen</title>
 </head>
 
 <body>
