h1 and subhead, h2 h3 and ul created

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+<h1>We make amazing apps</h1>
+
+<p>Dapper Gentlemen is an award-winning mobile and web design and development 
+studio located in Arizona
+
+<h2>We are smart</h2>
+	<h3>List of iOS technologies we know and use</h3>
+		<ul>
+			<li>1</li>
+		</ul>
 	
 </body>
 
