title change and other h3s

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Dapper Gentlemen knows mobile design and 
 	development can be complex for startup and enterprise businesses. Learn how 
 	we make it simple.">
-	<title>We Make Amazing Apps at Dapper Gentlemen</title>
+	<title>We Make Beautiful Web and Mobile Apps at Dapper Gentlemen</title>
 </head>
 
 <body>
@@ -16,7 +16,17 @@
 studio located in Arizona
 
 <h2>We are smart</h2>
-	<h3>List of iOS technologies we know and use</h3>
+	<h3>List of iOS and Android technologies we know and use</h3>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+
+	<h3>List of web front-end technologies we know and use</h3>
 		<ul>
 			<li></li>
 			<li></li>
@@ -26,6 +36,15 @@ studio located in Arizona
 			<li></li>
 		</ul>
 	
+	<h3>List of web front-end technologies we know and use</h3>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
 </body>
 
 </html>
