vocab change and comment

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ studio located in Arizona
 			<li></li>
 		</ul>
 	
-	<h3>List of web front-end technologies we know and use</h3>
+	<h3>List of web back-end technologies we know and use</h3>
+	<!-- USE BETTER TERM THAN 'BACK-END' BEFORE PRODUCTION -->
 		<ul>
 			<li></li>
 			<li></li>
