ios and android list created

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@ studio located in Arizona
 <h2>We are smart</h2>
 	<h3>List of iOS and Android technologies we know and use</h3>
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>Objective C (iOS)</li>
+			<li>Java (Android)</li>
+			<li>C#, XAML (Windows Phone)</li>
+			<li>Unity</li>
+			<li>Cocos2D</li>
+			<li>OpenGL</li>
+			<li>Titanium</li>
+			<li>Corona</li>
 		</ul>
 
 	<h3>List of web front-end technologies we know and use</h3>
