list of web tech created

--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@ studio located in Arizona
 			<li>Corona</li>
 		</ul>
 
-	<h3>List of web front-end technologies we know and use</h3>
+	<h3>List of web technologies we know and use</h3>
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>HTML5 / CSS3 / SCSS</li>
+			<li>Javascript / EMCAScript</li>
+			<li>Python / Django</li>
+			<li>PHP / MySQL</li>
+			<li>Ruby</li>
+			<li>nodeJS</li>
+			<li>AngularJS</li>
+			<li>React</li>
+			<li>Backbone.js</li>
 		</ul>
 	
 	<h3>List of web back-end technologies we know and use</h3>
