frameworks list and subhead placeholders

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ studio located in Arizona
 
 <h2>We are smart</h2>
 	<h3>List of iOS and Android technologies we know and use</h3>
+		<p>SUBHEAD</p>
 		<ul>
 			<li>Objective C (iOS)</li>
 			<li>Java (Android)</li>
@@ -29,6 +30,7 @@ studio located in Arizona
 		</ul>
 
 	<h3>List of web technologies we know and use</h3>
+		<p>SUBHEAD</p>
 		<ul>
 			<li>HTML5 / CSS3 / SCSS</li>
 			<li>Javascript / EMCAScript</li>
@@ -40,8 +42,19 @@ studio located in Arizona
 			<li>React</li>
 			<li>Backbone.js</li>
 		</ul>
+
+	<h3>Frameworks we know and love</h3>
+		<p>SUBHEAD</p>
+		<ul>
+			<li>Bourbon Neat</li>
+			<li>Bootstrap</li>
+			<li>Wordpress</li>
+			<li>Drupal</li>
+			<li>Ghost</li>
+		</ul>
 	
 	<h3>List of web back-end technologies we know and use</h3>
+		<p>SUBHEAD</p>
 	<!-- USE BETTER TERM THAN 'BACK-END' BEFORE PRODUCTION -->
 		<ul>
 			<li></li>
