--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ studio located in Arizona
 
 <h2>We are smart</h2>
 	<h3>List of iOS and Android technologies we know and use</h3>
-		<p>SUBHEAD</p>
+		<p>Whether you need to build native or cross-platform mobile apps, we 
+		know how to do that.</p>
 		<ul>
 			<li>Objective C (iOS)</li>
 			<li>Java (Android)</li>
