--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 studio located in Arizona
 
 <h2>We are smart</h2>
-	<h3>List of iOS and Android technologies we know and use</h3>
+	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
 		<p>Whether you need to build native or cross-platform mobile apps, we 
 		know how to do that.</p>
 		<ul>
@@ -31,7 +31,8 @@ studio located in Arizona
 		</ul>
 
 	<h3>List of web technologies we know and use</h3>
-		<p>SUBHEAD</p>
+		<p>We build scalable web apps with the technology that best fits your 
+		project.</p>
 		<ul>
 			<li>HTML5 / CSS3 / SCSS</li>
 			<li>Javascript / EMCAScript</li>
@@ -45,7 +46,8 @@ studio located in Arizona
 		</ul>
 
 	<h3>Frameworks we know and love</h3>
-		<p>SUBHEAD</p>
+		<p>We know how to utilize the best frameworks that can save you 
+		development time and money.</p>
 		<ul>
 			<li>Bourbon Neat</li>
 			<li>Bootstrap</li>
