web tech list updated with nosql

--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@ studio located in Arizona
 			<li>PHP / MySQL</li>
 			<li>Ruby</li>
 			<li>nodeJS</li>
-			<li>AngularJS</li>
-			<li>React</li>
-			<li>Backbone.js</li>
+			<li>AngularJS / React / Backbone.js</li>
+			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
 		</ul>
 
 	<h3>Frameworks we know and love</h3>
-		<p>We know how to utilize the best frameworks that can save you 
+		<p>We know how to utilize the best web frameworks that can save you 
 		development time and money.</p>
 		<ul>
 			<li>Bourbon Neat</li>
@@ -60,10 +59,10 @@ studio located in Arizona
 		<p>SUBHEAD</p>
 	<!-- USE BETTER TERM THAN 'BACK-END' BEFORE PRODUCTION -->
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>AWS Deployment</li>
+			<li>Azure Deployment</li>
+			<li>Scalable Infrastructures</li>
+			<li>Performance Optimization</li>
 			<li></li>
 			<li></li>
 		</ul>
