features and tech under mobile

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@ studio located in Arizona
 	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
 		<p>Whether you need to build native or cross-platform mobile apps, we 
 		know how to do that.</p>
+
+		<!-- FEATURES -->
+		<ul>
+			<li>Push notifications</li>
+			<li>In app purchases</li>
+			<li>Cross-platform development</li>
+			<li>Cloud integration</li>
+			<li>App store optimization</li>
+			<li>Post launch support</li>
+		</ul>
+
+		<!-- Technologies -->
 		<ul>
 			<li>Objective C (iOS)</li>
 			<li>Java (Android)</li>
@@ -55,7 +67,7 @@ studio located in Arizona
 			<li>Ghost</li>
 		</ul>
 	
-	<h3>List of web back-end technologies we know and use</h3>
+	<h3>List of cloud technologies we know and use</h3>
 		<p>SUBHEAD</p>
 	<!-- USE BETTER TERM THAN 'BACK-END' BEFORE PRODUCTION -->
 		<ul>
@@ -63,7 +75,7 @@ studio located in Arizona
 			<li>Azure Deployment</li>
 			<li>Scalable Infrastructures</li>
 			<li>Performance Optimization</li>
-			<li></li>
+			<li>iCloud</li>
 			<li></li>
 		</ul>
 </body>
