--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@ studio located in Arizona
 
 <h2>We are smart</h2>
 	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
-		<p>Whether you need to build native or cross-platform mobile apps, we 
-		know how to do that.</p>
+		<p>Whether you need to build full native or cross-platform mobile apps, 
+		or update features to your existing apps, we know how to do that.</p>
 
 		<!-- FEATURES -->
 		<ul>
+			<li>Design Docs</li>
+			<li>Project Management</li>
+			<li>UX / UI Design</li>
 			<li>Push notifications</li>
 			<li>In app purchases</li>
 			<li>Cross-platform development</li>
