--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 <p>Dapper Gentlemen is an award-winning mobile and web design and development 
 studio located in Arizona
 
-<h2>We are smart</h2>
-	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
-		<p>Whether you need to build full native or cross-platform mobile apps, 
-		or update features to your existing apps, we know how to do that.</p>
+<h2>The App Design and Development Process</h2>
 
-		<!-- FEATURES -->
-		<ul>
+<!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
+
+	<!--<ul>
 			<li>Design Docs</li>
 			<li>Project Management</li>
 			<li>UX / UI Design</li>
@@ -31,7 +29,12 @@ studio located in Arizona
 			<li>Cloud integration</li>
 			<li>App store optimization</li>
 			<li>Post launch support</li>
-		</ul>
+		</ul> -->
+
+<h2>We are smart</h2>
+	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
+		<p>Whether you need to build full native or cross-platform mobile apps, 
+		or update features to your existing apps, we know how to do that.</p>
 
 		<!-- Technologies -->
 		<ul>
