dev process subhead

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 studio located in Arizona
 
 <h2>The App Design and Development Process</h2>
+	<p>Learn more about the process of creating an app. From ideation to launch 
+	and post-launch support, we do it all.</p>
 
 <!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
 
@@ -29,6 +31,7 @@ studio located in Arizona
 			<li>Cloud integration</li>
 			<li>App store optimization</li>
 			<li>Post launch support</li>
+			<li>SEO and ASO</li>
 		</ul> -->
 
 <h2>We are smart</h2>
