joke in we are smart h2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ studio located in Arizona
 			<li>SEO and ASO</li>
 		</ul> -->
 
-<h2>We are smart</h2>
+<h2>We are smart (and handsome)</h2>
 	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
 		<p>Whether you need to build full native or cross-platform mobile apps, 
 		or update features to your existing apps, we know how to do that.</p>
