--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 studio located in Arizona
 
 <h2>The App Design and Development Process</h2>
-	<p>Learn more about the process of creating an app. From ideation to launch 
-	and post-launch support, we do it all.</p>
+	<p>Learn more about our agile development process of creating an app. From 
+	ideation to launch and post-launch support, we do it all.</p>
 
 <!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
 
@@ -32,6 +32,8 @@ studio located in Arizona
 			<li>App store optimization</li>
 			<li>Post launch support</li>
 			<li>SEO and ASO</li>
+			<li>git</li>
+			<li>Agile development</li>
 		</ul> -->
 
 <h2>We are smart (and handsome)</h2>
@@ -60,9 +62,7 @@ studio located in Arizona
 			<li>Python / Django</li>
 			<li>PHP / MySQL</li>
 			<li>Ruby</li>
-			<li>nodeJS</li>
 			<li>AngularJS / React / Backbone.js</li>
-			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
 		</ul>
 
 	<h3>Frameworks we know and love</h3>
@@ -77,7 +77,8 @@ studio located in Arizona
 		</ul>
 	
 	<h3>List of cloud technologies we know and use</h3>
-		<p>SUBHEAD</p>
+		<p>Whether you need us to deploy your app or fine-tune an existing app, 
+		we've got that all covered.</p>
 	<!-- USE BETTER TERM THAN 'BACK-END' BEFORE PRODUCTION -->
 		<ul>
 			<li>AWS Deployment</li>
@@ -85,7 +86,10 @@ studio located in Arizona
 			<li>Scalable Infrastructures</li>
 			<li>Performance Optimization</li>
 			<li>iCloud</li>
-			<li></li>
+			<li>LAMP (Linux / Apache / MySQL / PHP)</li>
+			<li>MEAN (MongoDB / express / AngularJS / nodeJS)</li>
+			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
+			<li>PostgreSQL</li>
 		</ul>
 </body>
 
