--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@ studio located in Arizona
 	<p>Learn more about our agile development process of creating an app. From 
 	ideation to launch and post-launch support, we do it all.</p>
 
-<!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
+	<!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
 
-	<!--<ul>
-			<li>Design Docs</li>
-			<li>Project Management</li>
-			<li>UX / UI Design</li>
-			<li>Push notifications</li>
-			<li>In app purchases</li>
-			<li>Cross-platform development</li>
-			<li>Cloud integration</li>
-			<li>App store optimization</li>
-			<li>Post launch support</li>
-			<li>SEO and ASO</li>
-			<li>git</li>
-			<li>Agile development</li>
-		</ul> -->
+		<!--<ul>
+				<li>Design Docs</li>
+				<li>Project Management</li>
+				<li>UX / UI Design</li>
+				<li>Push notifications</li>
+				<li>In app purchases</li>
+				<li>Cross-platform development</li>
+				<li>Cloud integration</li>
+				<li>App store optimization</li>
+				<li>Post launch support</li>
+				<li>SEO and ASO</li>
+				<li>git</li>
+				<li>Agile development</li>
+			</ul> -->
 
 <h2>We are smart (and handsome)</h2>
 	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
@@ -90,6 +90,10 @@ studio located in Arizona
 			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
 			<li>PostgreSQL</li>
 		</ul>
+
+<h2>We are talented (plus we work hard)</h2>
+	<p>You don't need to take our word for it, see some of the awards and 
+	praises we have recently received.</p>
 </body>
 
 </html>
