--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@ studio located in Arizona
 <h2>We are talented (plus we work hard)</h2>
 	<p>You don't need to take our word for it, see some of the awards and 
 	praises we have recently received.</p>
+
+	<h3>Number of countries in which our apps have reached the #1 spot</h3>
+		<ul>
+			<li>148</li>
+		</ul>
+
+	<h3>Honors and Awards</h3>
+		<ul>
+			<li>Winner: 2013 GDC Best in Play</li>
+			<li>Featured: Apple New and Noteworthy</li>
+			<li>Winner: 2014 Gold Addy</li>
+		</ul>
+
+	<h3>SOMETHING CLEVER AND FUNNY</h3>
+		<ul>
+			<li>IDK</li>
+		</ul>
 </body>
 
 </html>
