--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ studio located in Arizona
 			<li>Winner: 2014 Gold Addy</li>
 		</ul>
 
-	<h3>SOMETHING CLEVER AND FUNNY</h3>
+	<h3>Number of people using our apps</h3>
 		<ul>
-			<li>IDK</li>
+			<li>LARGE COUNTER THAT KEEPS INCREASING</li>
 		</ul>
 </body>
 
