--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@ studio located in Arizona
 		<ul>
 			<li>LARGE COUNTER THAT KEEPS INCREASING</li>
 		</ul>
+
+<h2>Our clients trust us</h2>
+	<p>If you look good, we look good, and we like looking good.</p>
+	<ul>
+		<li>Lexus</li>
+		<li>Microsoft</li>
+		<li>ESPN</li>
+		<li>Disney</li>
+		<li>Little Box</li>
+		<li>Keyser</li>
+		<li>PixelChat</li>
+	</ul>
+
+<h2>Get in touch</h2>
+	<p>Have a project for us? Get in touch</p>
 </body>
 
 </html>
