--- a/index.html
+++ b/index.html
@@ -10,20 +10,32 @@
 </head>
 
 <body>
-<h1>We make amazing apps</h1>
+	<h1>
+		We make amazing apps
+	</h1>
 
-<p itemscope itemtype="http://schema.org/LocalBusiness">
-	<span itemprop="name">
-		Dapper Gentlemen
-	</span>
-	is an award-winning mobile and web design and development studio 
-	located in
-		<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-			<span itemprop="addressRegion">
-				Arizona
+		<p
+			itemscope
+			itemtype="http://schema.org/LocalBusiness"
+		>
+			<span
+				itemprop="name"
+			>
+				Dapper Gentlemen
 			</span>
-		</span>
-	</p>
+			is an award-winning mobile and web design and development studio located in
+			<span
+				itemprop="address"
+				itemscope
+				itemtype="http://schema.org/PostalAddress"
+			>
+				<span
+					itemprop="addressRegion"
+				>
+					Arizona
+				</span>
+			</span>
+		</p>
 
 <h2>The App Design and Development Process</h2>
 	<p>Learn more about our agile development process of creating an app. From 
