formatting easier for sublime reading

--- a/index.html
+++ b/index.html
@@ -14,24 +14,13 @@
 		We make amazing apps
 	</h1>
 
-		<p
-			itemscope
-			itemtype="http://schema.org/LocalBusiness"
-		>
-			<span
-				itemprop="name"
-			>
+		<p itemscope itemtype="http://schema.org/LocalBusiness" >
+			<span itemprop="name">
 				Dapper Gentlemen
 			</span>
 			is an award-winning mobile and web design and development studio located in
-			<span
-				itemprop="address"
-				itemscope
-				itemtype="http://schema.org/PostalAddress"
-			>
-				<span
-					itemprop="addressRegion"
-				>
+			<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+				<span itemprop="addressRegion">
 					Arizona
 				</span>
 			</span>
@@ -65,14 +54,34 @@
 
 		<!-- Technologies -->
 		<ul>
-			<li>Objective C (iOS)</li>
-			<li>Java (Android)</li>
-			<li>C#, XAML (Windows Phone)</li>
-			<li>Unity</li>
-			<li>Cocos2D</li>
-			<li>OpenGL</li>
-			<li>Titanium</li>
-			<li>Corona</li>
+			<li itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">Objective C</span>
+				&nbsp;(
+				<span itemprop="operatingSystem">iOS</span>
+				)
+			</li>
+			<li itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">Java</span>
+				&nbsp;(
+				<span itemprop="operatingSystem">Android</span>
+				)
+			</li>
+			<li>
+<span itemscope itemtype="http://schema.org/SoftwareApplication">
+<span itemprop="name">C#</span></span>, 
+<span itemscope itemtype="http://schema.org/SoftwareApplication">
+<span itemprop="name">XAML</span> (
+<span itemprop="operatingSystem">Windows Phone</span></span>)</li>
+			
+<span itemscope itemtype="http://schema.org/SoftwareApplication"><li itemprop="name">Unity</li></span>
+			
+<span itemscope itemtype="http://schema.org/SoftwareApplication"><li itemprop="name">Cocos2D</li></span>
+			
+<span itemscope itemtype="http://schema.org/SoftwareApplication"><li itemprop="name">OpenGL</li></span>
+			
+<span itemscope itemtype="http://schema.org/SoftwareApplication"><li itemprop="name">Titanium</li></span>
+			
+<span itemscope itemtype="http://schema.org/SoftwareApplication"><li itemprop="name">Corona</li></span>
 		</ul>
 
 	<h3>List of web technologies we know and use</h3>
