--- a/index.html
+++ b/index.html
@@ -185,12 +185,51 @@
 		<p>We build scalable web apps with the technology that best fits your 
 		project.</p>
 		<ul>
-			<li>HTML5 / CSS3 / SCSS</li>
-			<li>Javascript / EMCAScript</li>
-			<li>Python / Django</li>
-			<li>PHP / MySQL</li>
-			<li>Ruby</li>
-			<li>AngularJS / React / Backbone.js</li>
+			<li>
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+				<span
+					itemprop="name"
+				>
+					HTML5
+				</span> 
+				<meta
+					id="_applicationCategory2"
+					itemprop="applicationCategory"
+					content="Web Technology"
+				>
+				</span>
+				/ 
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">CSS3</span> </span>/ 
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">SCSS</span></span></li>
+						<li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">Javascript</span> </span>/ 
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">EMCAScript</span></span></li>
+						<li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">Python</span> </span>/ 
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">Django</span></span></li>
+						<li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">PHP</span> </span>/ 
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">MySQL</span></span></li>
+						
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2"><li itemprop="name">Ruby</li></span>
+						<li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">AngularJS</span> </span>/ 
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">React</span> </span>/ 
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<span itemprop="name">Backbone.js</span></span></li>
 		</ul>
 
 	<h3>Frameworks we know and love</h3>
