microdata for html5, css3 scss formatted

--- a/index.html
+++ b/index.html
@@ -190,22 +190,42 @@
 					itemscope
 					itemtype="http://schema.org/SoftwareApplication"
 				>
-				<span
-					itemprop="name"
-				>
-					HTML5
-				</span> 
-				<meta
-					id="_applicationCategory2"
-					itemprop="applicationCategory"
-					content="Web Technology"
-				>
+					<span
+						itemprop="name"
+					>
+						HTML5
+					</span> 
+					<meta
+						id="_applicationCategory2"
+						itemprop="applicationCategory"
+						content="Web Technology"
+					>
 				</span>
 				/ 
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">CSS3</span> </span>/ 
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">SCSS</span></span></li>
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						CSS3
+					</span>
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						SCSS
+					</span>
+				</span>
+			</li>
 						<li>
 			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
 			<span itemprop="name">Javascript</span> </span>/ 
