--- a/index.html
+++ b/index.html
@@ -226,30 +226,93 @@
 					</span>
 				</span>
 			</li>
-						<li>
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">Javascript</span> </span>/ 
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">EMCAScript</span></span></li>
-						<li>
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">Python</span> </span>/ 
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">Django</span></span></li>
-						<li>
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">PHP</span> </span>/ 
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">MySQL</span></span></li>
+			<li>
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						Javascript
+					</span>
+				</span>/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						EMCAScript
+					</span>
+				</span>
+			</li>
+			<li>
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						Python
+					</span> 
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						Django
+					</span>
+				</span>
+			</li>
+			<li>
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						PHP
+					</span>
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						MySQL
+					</span>
+				</span>
+			</li>
 						
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2"><li itemprop="name">Ruby</li></span>
-						<li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
+			<li itemprop="name">Ruby
+			</li>
+			</span>
+			<li>
 			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
 			<span itemprop="name">AngularJS</span> </span>/ 
 			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
 			<span itemprop="name">React</span> </span>/ 
 			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">Backbone.js</span></span></li>
+			<span itemprop="name">Backbone.js</span></span>
+			</li>
 		</ul>
 
 	<h3>Frameworks we know and love</h3>
