microdata formatted for ruby, anjular, react and backbone

--- a/index.html
+++ b/index.html
@@ -299,19 +299,54 @@
 						MySQL
 					</span>
 				</span>
-			</li>
-						
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<li itemprop="name">Ruby
-			</li>
+			</li>	
+			<span
+				itemscope
+				itemtype="http://schema.org/SoftwareApplication"
+				itemref="_applicationCategory2"
+			>
+				<li
+					itemprop="name"
+				>
+					Ruby
+				</li>
 			</span>
 			<li>
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">AngularJS</span> </span>/ 
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">React</span> </span>/ 
-			<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_applicationCategory2">
-			<span itemprop="name">Backbone.js</span></span>
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						AngularJS
+					</span>
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						React
+					</span>
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+					itemref="_applicationCategory2"
+				>
+					<span
+						itemprop="name"
+					>
+						Backbone.js
+					</span>
+				</span>
 			</li>
 		</ul>
 
