bourbon neat microdata and restarting technologies data since i did it all wrong

--- a/index.html
+++ b/index.html
@@ -65,120 +65,14 @@
 
 		<!-- Technologies -->
 		<ul>
-			<li
-				itemscope
-				itemtype="http://schema.org/SoftwareApplication"
-			>
-				<span
-					itemprop="name"
-				>
-					Objective C
-				</span>
-				 (
-				<span
-					itemprop="operatingSystem"
-				>
-					iOS
-				</span>
-				)
-			</li>
-			<li
-				itemscope
-				itemtype="http://schema.org/SoftwareApplication"
-			>
-				<span
-					itemprop="name"
-				>
-					Java
-				</span>
-				 (
-				<span
-					itemprop="operatingSystem"
-				>
-					Android
-				</span>
-				 )
-			</li>
-			<li>
-				<span
-					itemscope
-					itemtype="http://schema.org/SoftwareApplication"
-				>
-					<span
-						itemprop="name"
-					>
-						C#
-					</span>
-					/
-				</span> 
-				<span
-					itemscope
-					itemtype="http://schema.org/SoftwareApplication"
-				>
-					<span
-						itemprop="name"
-					>
-						XAML
-					</span>
-					(
-					<span 
-						itemprop="operatingSystem"
-					>
-						Windows Phone
-					</span>
-				</span>
-				)
-			</li>			
-			<span
-				itemscope
-				itemtype="http://schema.org/SoftwareApplication"
-			>
-				<li
-					itemprop="name"
-				>
-					Unity
-				</li>
-			</span>		
-			<span
-				itemscope
-				itemtype="http://schema.org/SoftwareApplication"
-			>
-				<li
-					itemprop="name"
-				>
-					Cocos2D
-				</li>
-			</span>		
-			<span
-				itemscope
-				itemtype="http://schema.org/SoftwareApplication"
-			>
-				<li
-					itemprop="name"
-				>
-					OpenGL
-				</li>
-			</span>
-			<span
-				itemscope
-				itemtype="http://schema.org/SoftwareApplication"
-			>
-				<li
-					itemprop="name"
-				>
-					Titanium
-				</li>
-			</span>
-			<span
-				itemscope
-				itemtype="http://schema.org/SoftwareApplication"
-			>
-				<li
-					itemprop="name"
-				>
-					Corona
-				</li>
-			</span>
+			<li>Objective C ( iOS )</li>
+			<li>Java ( Android )</li>
+			<li>C# / XAML ( Windows Phone )</li>
+			<li>Unity</li>
+			<li>Cocos2D</li>
+			<li>OpenGL</li>
+			<li>Titanium</li>
+			<li>Corona</li>
 		</ul>
 
 	<h3>List of web technologies we know and use</h3>
@@ -354,7 +248,15 @@
 		<p>We know how to utilize the best web frameworks that can save you 
 		development time and money.</p>
 		<ul>
-			<li>Bourbon Neat</li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<li itemprop="name">Bourbon Neat</li>
+				<meta itemprop="downloadUrl" content="http://bourbon.io/">
+				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+				<meta itemprop="name" content="thoughtbot inc"></span>
+				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
+				<meta itemprop="name" content="thoughtbot inc"></span>
+				<meta itemprop="applicationCategory" content="Open Source">
+			</span>
 			<li>Bootstrap</li>
 			<li>Wordpress</li>
 			<li>Drupal</li>
