objective c and ios metadata readded

--- a/index.html
+++ b/index.html
@@ -65,7 +65,16 @@
 
 		<!-- Technologies -->
 		<ul>
-			<li>Objective C ( iOS )</li>
+			<li itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">Objective C</span> ( 
+				<span itemprop="operatingSystem">iOS</span> )
+				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+				<meta itemprop="name" content="Apple"></span>
+				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
+				<meta itemprop="name" content="Apple"></span>
+				<meta itemprop="url" content="https://developer.apple.com/library/mac/documentation/cocoa/conceptual/ProgrammingWithObjectiveC/Introduction/Introduction.html">
+				<meta itemprop="applicationCategory" content="iPhone Programming">
+			</li>
 			<li>Java ( Android )</li>
 			<li>C# / XAML ( Windows Phone )</li>
 			<li>Unity</li>
