frameworks microdata added. removed ghost. commented out, i might utilize this for seo stuff - wordpress - but i might not

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
 			</li>
 		</ul>
 
+<!--
 	<h3>Frameworks we know and love</h3>
 		<p>We know how to utilize the best web frameworks that can save you 
 		development time and money.</p>
@@ -266,12 +267,36 @@
 				<meta itemprop="name" content="thoughtbot inc"></span>
 				<meta itemprop="applicationCategory" content="Open Source">
 			</span>
-			<li>Bootstrap</li>
-			<li>Wordpress</li>
-			<li>Drupal</li>
-			<li>Ghost</li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<li itemprop="name">Bootstrap</li>
+				<meta itemprop="downloadUrl" content="http://getbootstrap.com/getting-started/#download">
+				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+				<meta itemprop="name" content="Twitter"></span>
+				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
+				<meta itemprop="name" content="Twitter"></span>
+				<meta itemprop="url" content="http://getbootstrap.com/">
+				<meta itemprop="applicationCategory" content="Frontend Framework">
+			</span>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<li itemprop="name">Wordpress</li>
+				<meta itemprop="downloadUrl" content="https://wordpress.org/download/">
+				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+				<meta itemprop="name" content="automattic"></span>
+				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
+				<meta itemprop="name" content="automattic"></span>
+				<meta itemprop="url" content="https://wordpress.org/">
+				<meta itemprop="applicationCategory" content="CMS">
+			</span>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<li itemprop="name">Drupal</li>
+				<meta itemprop="downloadUrl" content="https://www.drupal.org/download">
+				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
+				<meta itemprop="name" content="Dries Buytaert"></span>
+				<meta itemprop="url" content="https://www.drupal.org/">
+				<meta itemprop="applicationCategory" content="CMS">
+			</span>
 		</ul>
-	
+-->
 	<h3>List of cloud technologies we know and use</h3>
 		<p>Whether you need us to deploy your app or fine-tune an existing app, 
 		we've got that all covered.</p>
