--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 		<p itemscope itemtype="http://schema.org/LocalBusiness">
 			<span itemprop="name">Dapper Gentlemen</span> is an award-winning mobile and web design and development studio located in 
 			<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-			<span itemprop="addressRegion">Arizona</span>
-			<meta itemprop="streetAddress" content="1325 N Melba Ct">
-			<meta itemprop="addressLocality" content="Gilbert">
-			<meta itemprop="postalCode" content="85233">
-			<meta itemprop="addressCountry" content="United States of America"></span>
+				<span itemprop="addressRegion">Arizona</span>
+				<meta itemprop="streetAddress" content="1325 N Melba Ct">
+				<meta itemprop="addressLocality" content="Gilbert">
+				<meta itemprop="postalCode" content="85233">
+				<meta itemprop="addressCountry" content="United States of America">
+			</span>
 			<meta itemprop="url" content="http://dappergentlemen.com/">
 			<meta itemprop="email" content="info@dappergentlemen.com">
 		</p>
