removed author from apple and google

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 				<span itemprop="name">Objective C</span> ( 
 				<span itemprop="operatingSystem">iOS</span> )
 				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-				<meta itemprop="name" content="Apple"></span>
-				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
-				<meta itemprop="name" content="Apple"></span>
+					<meta itemprop="name" content="Apple">
+				</span>
 				<meta itemprop="url" content="https://developer.apple.com/library/mac/documentation/cocoa/conceptual/ProgrammingWithObjectiveC/Introduction/Introduction.html">
 				<meta itemprop="applicationCategory" content="iPhone Apps">
 			</li>
@@ -70,9 +69,8 @@
 				<span itemprop="name">Java</span> ( 
 				<span itemprop="operatingSystem">Android</span> )
 				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-				<meta itemprop="name" content="Google"></span>
-				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
-				<meta itemprop="name" content="Google"></span>
+					<meta itemprop="name" content="Google">
+				</span>
 				<meta itemprop="applicationCategory" content="Android Apps">
 			</li>
 			<li>
