removed author from microsoft

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 				<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_operatingSystem2">
 					<span itemprop="name">C#</span> 
 					<span id="_publisher3" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-					<meta itemprop="name" content="Microsoft"></span>
-					<span id="_author4" itemprop="author" itemscope itemtype="http://schema.org/Person">
-					<meta itemprop="name" content="Microsoft"></span>
-					<meta id="_applicationCategory5" itemprop="applicationCategory" content="Mobile Apps"></span>/ 
-					<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_publisher3 _author4 _applicationCategory5">
+						<meta itemprop="name" content="Microsoft">
+					</span>
+					<meta id="_applicationCategory5" itemprop="applicationCategory" content="Mobile Apps">
+				</span>/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_publisher3 _author4 _applicationCategory5">
 					<span itemprop="name">XAML</span> ( 
 					<span id="_operatingSystem2" itemprop="operatingSystem">Windows Phone</span>
 				</span>)
