--- a/index.html
+++ b/index.html
@@ -73,26 +73,23 @@
 				</span>
 				<meta itemprop="applicationCategory" content="Android Apps">
 			</li>
-			<li>
-				<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_operatingSystem2">
-					<span itemprop="name">C#</span> 
-					<span id="_publisher3" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-						<meta itemprop="name" content="Microsoft">
-					</span>
-					<meta id="_applicationCategory5" itemprop="applicationCategory" content="Mobile Apps">
+			<li itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_operatingSystem2">
+				<span itemprop="name">C#</span> 
+				<span id="_publisher3" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+					<meta itemprop="name" content="Microsoft">
+				</span>
+				<meta id="_applicationCategory5" itemprop="applicationCategory" content="Mobile Apps">
 				</span>/ 
 				<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_publisher3 _author4 _applicationCategory5">
 					<span itemprop="name">XAML</span> ( 
-					<span id="_operatingSystem2" itemprop="operatingSystem">Windows Phone</span>
-				</span>)
+					<span id="_operatingSystem2" itemprop="operatingSystem">Windows Phone</span> )
 			</li>
 			<span itemscope itemtype="http://schema.org/SoftwareApplication">
 				<li itemprop="name">Unity</li>
 				<meta itemprop="downloadUrl" content="http://unity3d.com/unity/download">
 				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-				<meta itemprop="name" content="Unity Technologies"></span>
-				<span itemprop="author" itemscope itemtype="http://schema.org/Person">
-				<meta itemprop="name" content="Unity Technologies"></span>
+					<meta itemprop="name" content="Unity Technologies">
+				</span>
 				<meta itemprop="url" content="http://unity3d.com/">
 				<meta itemprop="applicationCategory" content="Cross Platform">
 			</span>
