formatted for better gits

--- a/index.html
+++ b/index.html
@@ -56,14 +56,39 @@
 
 		<!-- Technologies -->
 		<ul>
-			<li itemscope itemtype="http://schema.org/SoftwareApplication">
-				<span itemprop="name">Objective C</span> ( 
-				<span itemprop="operatingSystem">iOS</span> )
-				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-					<meta itemprop="name" content="Apple">
+			<li
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<span
+					itemprop="name"
+				>
+					Objective C
 				</span>
-				<meta itemprop="url" content="https://developer.apple.com/library/mac/documentation/cocoa/conceptual/ProgrammingWithObjectiveC/Introduction/Introduction.html">
-				<meta itemprop="applicationCategory" content="iPhone Apps">
+				( 
+				<span
+					itemprop="operatingSystem"
+				>
+					iOS
+				</span>
+				)
+				<span
+					itemprop="publisher"
+					itemscope itemtype="http://schema.org/Organization"
+				>
+					<meta
+						itemprop="name"
+						content="Apple"
+					>
+				</span>
+				<meta
+					itemprop="url"
+					content="https://developer.apple.com/library/mac/documentation/cocoa/conceptual/ProgrammingWithObjectiveC/Introduction/Introduction.html"
+				>
+				<meta
+					itemprop="applicationCategory"
+					content="iPhone Apps"
+				>
 			</li>
 			<li itemscope itemtype="http://schema.org/SoftwareApplication">
 				<span itemprop="name">Java</span> ( 
