--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<h1>
 			We make amazing apps
 		</h1>
-		<p itemscope itemtype="http://schema.org/LocalBusiness">
+		<p itemscope itemtype="http://schema.org/Organization">
 			<span itemprop="name">Dapper Gentlemen</span> is an award-winning mobile and web design and development studio located in 
 			<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-				<span itemprop="addressRegion">Arizona</span>
 				<meta itemprop="streetAddress" content="1325 N Melba Ct">
 				<meta itemprop="addressLocality" content="Gilbert">
+				<span itemprop="addressRegion">AZ</span>
 				<meta itemprop="postalCode" content="85233">
 				<meta itemprop="addressCountry" content="United States of America">
 			</span>
