verbiage cleanup in subhead

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 			We make amazing apps
 		</h1>
 		<p itemscope itemtype="http://schema.org/Organization">
-			<span itemprop="name">Dapper Gentlemen</span> is an award-winning mobile and web design and development studio located in 
+			<span
+				itemprop="name"
+			>
+				Dapper Gentlemen
+			</span>
+			is an award-winning mobile and web development studio located in 
 			<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 				<meta itemprop="streetAddress" content="1325 N Melba Ct">
 				<meta itemprop="addressLocality" content="Gilbert">
@@ -28,9 +33,10 @@
 		</p>
 	</header>
 
-<h2>The App Design and Development Process</h2>
-	<p>Learn more about our agile development process of creating an app. From 
-	ideation to launch and post-launch support, we do it all.</p>
+<h2>App Design and Development Process</h2>
+	<p>Learn more about our agile development process. From 
+	ideation to launch and post-launch support, we do it all. We
+	are kinda amazing in that way ;)</p>
 
 	<!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
 
