git formatting for address microdata

--- a/index.html
+++ b/index.html
@@ -21,15 +21,40 @@
 				Dapper Gentlemen
 			</span>
 			is an award-winning mobile and web development studio located in 
-			<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-				<meta itemprop="streetAddress" content="1325 N Melba Ct">
-				<meta itemprop="addressLocality" content="Gilbert">
-				<span itemprop="addressRegion">AZ</span>
-				<meta itemprop="postalCode" content="85233">
-				<meta itemprop="addressCountry" content="United States of America">
+			<span
+				itemprop="address"
+				itemscope itemtype="http://schema.org/PostalAddress"
+			>
+				<meta
+					itemprop="streetAddress"
+					content="1325 N Melba Ct"
+				>
+				<meta
+					itemprop="addressLocality" 
+					content="Gilbert"
+				>
+				<span
+					itemprop="addressRegion"
+				>
+					AZ
+				</span>
+				<meta
+					itemprop="postalCode" 
+					content="85233"
+				>
+				<meta 
+					itemprop="addressCountry" 
+					content="United States of America"
+				>
 			</span>
-			<meta itemprop="url" content="http://dappergentlemen.com/">
-			<meta itemprop="email" content="info@dappergentlemen.com">
+			<meta 
+				itemprop="url" 
+				content="http://dappergentlemen.com/"
+			>
+			<meta 
+				itemprop="email" 
+				content="info@dappergentlemen.com"
+			>
 		</p>
 	</header>
 
