fixed commented out section to include part i missed

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 		</p>
 	</header>
 
-<h2>App Design and Development Process</h2>
+<!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
+
+<!-- <h2>App Design and Development Process</h2>
 	<p>Learn more about our agile development process. From 
 	ideation to launch and post-launch support, we do it all. We
 	are kinda amazing in that way ;)</p>
 
-	<!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
-
-		<!--<ul>
+			<ul>
 				<li>Design Docs</li>
 				<li>Project Management</li>
 				<li>UX / UI Design</li>
