--- a/index.html
+++ b/index.html
@@ -121,38 +121,230 @@
 					content="iPhone Apps"
 				>
 			</li>
-			<li itemscope itemtype="http://schema.org/SoftwareApplication">
-				<span itemprop="name">Java</span> ( 
-				<span itemprop="operatingSystem">Android</span> )
-				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-					<meta itemprop="name" content="Google">
+			<li 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<span 
+					itemprop="name"
+				>
+					Java
 				</span>
-				<meta itemprop="applicationCategory" content="Android Apps">
+				( 
+				<span 
+					itemprop="operatingSystem"
+				>
+					Android
+				</span>
+				)
+				<span 
+					itemprop="publisher" 
+					itemscope itemtype="http://schema.org/Organization"
+				>
+					<meta 
+						itemprop="name" 
+						content="Google"
+					>
+				</span>
+				<meta 
+					itemprop="applicationCategory" 
+					content="Android Apps"
+				>
 			</li>
-			<li itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_operatingSystem2">
-				<span itemprop="name">C#</span> 
-				<span id="_publisher3" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-					<meta itemprop="name" content="Microsoft">
+			<li 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication" 
+				itemref="_operatingSystem2"
+			>
+				<span 
+					itemprop="name"
+				>
+					C#
+				</span> 
+				<span 
+					id="_publisher3" 
+					itemprop="publisher" 
+					itemscope itemtype="http://schema.org/Organization"
+				>
+				<meta 
+					itemprop="name" 
+					content="Microsoft"
+				>
 				</span>
-				<meta id="_applicationCategory5" itemprop="applicationCategory" content="Mobile Apps">
-				</span>/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication" itemref="_publisher3 _author4 _applicationCategory5">
-					<span itemprop="name">XAML</span> ( 
-					<span id="_operatingSystem2" itemprop="operatingSystem">Windows Phone</span> )
+				<meta 
+					id="_applicationCategory5" 
+					itemprop="applicationCategory" 
+					content="Mobile Apps"
+				>
+				</span>
+				/ 
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication" 
+					itemref="_publisher3 _author4 _applicationCategory5"
+				>
+					<span 
+						itemprop="name"
+					>
+						XAML
+					</span>
+					( 
+					<span 
+						id="_operatingSystem2" 
+						itemprop="operatingSystem"
+					>
+						Windows Phone
+					</span>
+					)
+				</span>
 			</li>
-			<span itemscope itemtype="http://schema.org/SoftwareApplication">
-				<li itemprop="name">Unity</li>
-				<meta itemprop="downloadUrl" content="http://unity3d.com/unity/download">
-				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-					<meta itemprop="name" content="Unity Technologies">
+			<span 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<li 
+					itemprop="name"
+				>
+					Unity
+				</li>
+				<meta 
+					itemprop="downloadUrl" 
+					content="http://unity3d.com/unity/download"
+				>
+				<span 
+					itemprop="publisher" 
+					itemscope itemtype="http://schema.org/Organization"
+				>
+					<meta 
+						itemprop="name" 
+						content="Unity Technologies"
+					>
 				</span>
-				<meta itemprop="url" content="http://unity3d.com/">
-				<meta itemprop="applicationCategory" content="Cross Platform">
+				<meta 
+					itemprop="url" 
+					content="http://unity3d.com/"
+				>
+				<meta 
+					itemprop="applicationCategory" 
+					content="Cross Platform"
+				>
 			</span>
-			<li>Cocos2D</li>
-			<li>OpenGL</li>
-			<li>Titanium</li>
-			<li>Corona</li>
+			<span 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<li 
+					itemprop="name"
+				>
+					Cocos2D
+				</li>
+				<meta 
+					itemprop="downloadUrl" 
+					content="http://www.cocos2d-x.org/download"
+				>
+				<span 
+					itemprop="publisher" 
+					itemscope itemtype="http://schema.org/Organization"
+				>
+					<meta 
+						itemprop="name" 
+						content="Cocos2D"
+					>
+				</span>
+				<meta 
+					itemprop="url" 
+					content="http://cocos2d.org/"
+				>
+				<meta 
+					itemprop="applicationCategory" 
+					content="Mobile Game Engine"
+				>
+			</span>
+			<span 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<li 
+					itemprop="name"
+				>
+					OpenGL
+				</li>
+				<span 
+					itemprop="publisher" 
+					itemscope itemtype="http://schema.org/Organization"
+				>
+					<meta 
+						itemprop="name" 
+						content="Silicon Graphics International Corp"
+					>
+				</span>
+				<meta 
+					itemprop="url" 
+					content="https://www.opengl.org/"
+				>
+				<meta 
+					itemprop="applicationCategory" 
+					content="Video Games"
+				>
+			</span>
+			<span 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<li 
+					itemprop="name"
+				>
+					Titanium
+				</li>
+				<meta 
+					itemprop="downloadUrl" 
+					content="http://www.appcelerator.com/titanium/download-titanium/"
+				>
+				<span 
+					itemprop="publisher" 
+					itemscope itemtype="http://schema.org/Organization"
+				>
+					<meta 
+						itemprop="name" 
+						content="Appcelerator"
+					>
+				</span>
+				<meta 
+					itemprop="url" 
+					content="http://www.appcelerator.com/titanium/"
+				>
+				<meta 
+					itemprop="applicationCategory" 
+					content="Mobile App IDE"
+				>
+			</span>
+			<span 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<li 
+					itemprop="name"
+				>
+					Corona
+				</li>
+				<span 
+					itemprop="publisher" 
+					itemscope itemtype="http://schema.org/Organization"
+				>
+					<meta 
+						itemprop="name" 
+						content="Corona Labs Inc"
+					>
+				</span>
+				<meta 
+					itemprop="url" 
+					content="http://coronalabs.com/"
+				>
+				<meta 
+					itemprop="applicationCategory" 
+					content="Mobile App IDE"
+				>
+			</span>
 		</ul>
 
 	<h3>List of web technologies we know and use</h3>
