subhead changed for clouds

--- a/index.html
+++ b/index.html
@@ -561,8 +561,7 @@
 		</ul>
 -->
 	<h3>List of cloud technologies we know and use</h3>
-		<p>Whether you need us to deploy your app or fine-tune an existing app, 
-		we've got that all covered.</p>
+		<p>So much magic to be built on the back-end.</p>
 		<ul>
 			<li>AWS Deployment</li>
 			<li>Azure Deployment</li>
