--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="description" content="Dapper Gentlemen knows mobile design and 
-	development can be complex for startup and enterprise businesses. Learn how 
-	we make it simple.">
-	<title>We Make Award-Winning Apps at Dapper Gentlemen</title>
+	<meta
+		charset="UTF-8"
+	>
+	<meta
+		name="description"
+		content="Dapper Gentlemen knows mobile design and development can be complex for startups and enterprise companies. Learn how we make it simple."
+	>
+	<title>
+		We Make Award-Winning Apps at Dapper Gentlemen
+	</title>
+
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-26915880-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </head>
 
 <body>
@@ -560,7 +574,7 @@
 			</span>
 		</ul>
 -->
-	<h3>List of cloud technologies we know and use</h3>
+	<h3>List of cloud technologies we work with</h3>
 		<p>So much magic to be built on the back-end.</p>
 		<ul>
 			<li>AWS Deployment</li>
