--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 			</ul> -->
 
 <h2>We are smart (and handsome)</h2>
+<!-- MOBILEMAGIC -->
 	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
 		<p>Whether you need to build full native or cross-platform mobile apps, 
 		or update features to your existing apps, we know how to do that.</p>
@@ -360,7 +361,7 @@
 				>
 			</span>
 		</ul>
-
+<!-- WEBTASTIC -->
 	<h3>List of web technologies we know and use</h3>
 		<p>We build scalable web apps with the technology that best fits your 
 		project.</p>
@@ -529,7 +530,6 @@
 				</span>
 			</li>
 		</ul>
-
 <!--
 	<h3>Frameworks we know and love</h3>
 		<p>We know how to utilize the best web frameworks that can save you 
@@ -574,6 +574,7 @@
 			</span>
 		</ul>
 -->
+<!-- THE CLOUD tm -->
 	<h3>List of cloud technologies we work with</h3>
 		<p>So much magic to be built on the back-end.</p>
 		<ul>
