comment verbiage change

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 				</span>
 			</li>
 		</ul>
-<!--
+<!-- FRAMEWORKS FOR KEYWORDS AKA WORDPRESS
 	<h3>Frameworks we know and love</h3>
 		<p>We know how to utilize the best web frameworks that can save you 
 		development time and money.</p>
